# rust-embedded-with-stm32f4

./: README.md
demo/: Cargo.toml  memory.x
demo/.cargo/: config
demo/examples/: basic.rs  gpio_led.rs  gpio_led_by_register.rs  gpio_led_by_register_fixed.rs  hello.rs
demo/src/: clock_frequency.rs  clock_utils.rs  constants.rs  main.rs  rcc_clock_settings.rs  register_utils.rs
demo/src/register_utils/: flash_access_control_register.rs  rcc_clock_config_register.rs  rcc_clock_control_register.rs  rcc_pll_config_register.rs  system_tick_timer_register.rs
tutorial/: book.toml
tutorial/src/: SUMMARY.md  about-the-hardware.md  introduction.md  the-hardware-we-will-use-in-the-demo.md  what-is-the-interrput-and-how-to-use-it.md
tutorial/src/.interrupts/: secret_to_call_system_tick_exception.md
tutorial/src/clocks/: dive-deep-into-clock-source-selecting.md  index.md  system-clock-setting-demo.md  what-a-clock-tree-digram-looks-like.md  what-exactly-the-clock-is.md  what-is-clock-source-selecting.md
tutorial/src/how-to-choose-which-crate-to-start/: how-to-quit-cargo-run-qemu.md  index.md  the-basic-example.md  the-gpio-led-example.md
tutorial/src/important-concepts/: what-is-mcu.md  what-is-stm32.md
tutorial/src/interrupts/: how-exception-works.md  how-to-enable.md  index.md  secret_to_call_system_tick_exception.md  system-tick-exeption-handler.md
tutorial/src/setup-environment/: create-demo-project-from-template.md  index.md  install-tooling.md  run-hello-example-in-hardware.md  run-hello-example-in-qemu.md
tutorial/src/something-you-need-to-know-before-we-dive-deep/: fix-the-bug-in-release-build.md  fun-part-code-comparison.md  index.md  mcu-gpio-register.md  (+3 more)
(+23 files in other folders)
