[package]
authors = ["Wison Ye <wisonye@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "demo"
version = "0.1.0"

[features]
default = []
enable-debug = ["cortex-m-semihosting", "heapless"]
enable-pac = ["stm32f4"]
enable-hal = ["stm32f4xx-hal"]
use-weact-black-pill = []
use-stm32f407g-disc1 = []

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
# panic-halt = "0.2.0"

# For debugging purpose, enable `exit` feature
panic-semihosting = { version = "0.5.3", features = ['exit'] }

# Print debug info to host console, optional
cortex-m-semihosting = { version = "0.3.3", optional = true }

# PAC (Peripheral Access Crate), optional
stm32f4 = { version = "0.11.0", features = ["stm32f407", "rt"], optional = true }

# HAL (Hardware Abstraction Layer), optional
stm32f4xx-hal = { version = "0.8.3", features = ['stm32f407'], optional = true }

heapless = { version = "0.5.6", optional = true }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"


# this lets you use `cargo fix`!
[[bin]]
name = "demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = 'z'  # Optimize for size.
